Refactor 'Beverage' class to use LinkedList instead of ArrayList